--- a/app/src/main/res/layout/activity_student_detail.xml
+++ b/app/src/main/res/layout/activity_student_detail.xml
@@ -164,7 +164,7 @@
         android:layout_marginTop="16dp"
         android:text="@string/startDeal"
         android:textStyle="bold"
-        android:background="@android:color/holo_blue_dark"
+        android:background="@android:color/holo_red_dark"
         android:textSize="20dp"
         android:textColor="@android:color/white"/>
 </RelativeLayout>
